AB-55 Add datepicker, handle vendor javascript in gulp

--- a/admin/frontend/styles/style.sass
+++ b/admin/frontend/styles/style.sass
@@ -7,6 +7,9 @@
 @import 'base/layout'
 @import 'base/grid'
 
+@import 'vendors/icomoon'
+@import 'vendors/bulma-calendar'
+
 @import 'components/forms'
 @import 'components/layout'
 @import 'components/navbar'
@@ -18,8 +21,6 @@
 @import 'components/pagination'
 @import 'components/empty-table'
 @import 'components/notification'
-
-@import 'vendors/icomoon'
 
 @import 'views/dashboard'
 @import 'views/edit'
